<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@id/namesearchlble"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dip"
                android:text="@string/productname" />

            <AutoCompleteTextView
                android:id="@id/namesearchET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:duplicateParentState="true"
                android:inputType="text"
                android:completionThreshold="1"/>

            <TextView
                android:id="@id/pricesearchlble"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dip"
                android:layout_marginTop="5dip"
                android:text="@string/productprice" />

            <EditText
                android:id="@id/pricesearchET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@id/searchBT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/search" />

            <Button
                android:id="@id/searchCancelBT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dip"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>